--- a/frontend/explore.html
+++ b/frontend/explore.html
@@ -11,7 +11,8 @@
     <link rel="icon" type="image/svg+xml" href="/frontend/images/favicon/restaurant-2-fill.svg">
     <link href="https://fonts.googleapis.com/css?family=Merienda:300,regular,500,600,700,800,900" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Varela:regular" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,700" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Rubik:300,regular,500,600,700,800,900" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
@@ -99,15 +100,15 @@
         #elem6 {
             grid-area: f;
         }
-        
+
         @media (max-width: 1024px) {
             .left {
                 display: none;
             }
 
             .right {
-                width: 80%;
-                margin-left: 20%;
+                width: 100%;
+                margin-left: 0;
             }
         }
 
@@ -146,7 +147,6 @@
             }
         }
     </style>
-    <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -154,7 +154,7 @@
         <nav class="navbar">
             <div class="logo">
                 <i class="ri-restaurant-2-fill" aria-hidden="true"></i>
-                <span class="logos">Campus Cuisine</span>
+                <a class="logos" href="/frontend/index.html">Campus Cuisine</a>
             </div>
             <ul class="nav-links">
                 <li><a href="#"><i class="ri-home-2-fill"></i> Home</a></li>
@@ -201,7 +201,7 @@
         </div>
     </section>
 
-    <script src="script.js"></script>
+    <script src="explore.js"></script>
 </body>
 
 </html>
