--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.scss">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet">
-    <link rel="icon" type="image/svg+xml" href="/frontend/images/favicon/restaurant-2-fill.svg">
+    <link rel="icon" type="image/svg+xml" href="/images/favicon/restaurant-2-fill.svg">
     <link href="https://fonts.googleapis.com/css?family=Merienda:300,regular,500,600,700,800,900" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Varela:regular" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,700|Raleway:400,700&display=swap"
@@ -20,7 +20,7 @@
     <style>
         @font-face {
             font-family: American Typewriter;
-            src: url('/frontend/font/American\ Typewriter\ Regular.ttf');
+            src: url('/font/American\ Typewriter\ Regular.ttf');
         }
         body {
             width: 100%;
