--- a/frontend/explore.html
+++ b/frontend/explore.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.scss">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet">
-    <link rel="icon" type="image/svg+xml" href="/frontend/images/favicon/restaurant-2-fill.svg">
+    <link rel="icon" type="image/svg+xml" href="/images/favicon/restaurant-2-fill.svg">
     <link href="https://fonts.googleapis.com/css?family=Merienda:300,regular,500,600,700,800,900" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Varela:regular" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700" rel="stylesheet" />
@@ -154,7 +154,7 @@
         <nav class="navbar">
             <div class="logo">
                 <i class="ri-restaurant-2-fill" aria-hidden="true"></i>
-                <a class="logos" href="/frontend/index.html">Campus Cuisine</a>
+                <a class="logos" href="/index.html">Campus Cuisine</a>
             </div>
             <ul class="nav-links">
                 <li><a href="#"><i class="ri-home-2-fill"></i> Home</a></li>
