--- a/frontend/explore.html
+++ b/frontend/explore.html
@@ -1,207 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Campus Cuisine</title>
-    <link rel="stylesheet" href="style.scss">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet">
-    <link rel="icon" type="image/svg+xml" href="/images/favicon/restaurant-2-fill.svg">
-    <link href="https://fonts.googleapis.com/css?family=Merienda:300,regular,500,600,700,800,900" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Varela:regular" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Poppins:400,700" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Rubik:300,regular,500,600,700,800,900" rel="stylesheet" />
+    <title>Document</title>
+    <link rel="stylesheet" href="explore.css">
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&amp;family=Montserrat:wght@400;500;600&amp;display=swap&amp;_cacheOverride=1742722788368" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-        }
-
-        header {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            z-index: 1000;
-            background: white;
-        }
-
-        section {
-            width: 100%;
-            height: calc(100vh - 5rem);
-            display: flex;
-            margin-top: 5rem;
-            overflow: hidden;
-        }
-
-        .left {
-            width: 17%;
-            height: calc(100vh - 5rem);
-            display: grid;
-            grid-template-areas:
-                "a a a a a"
-                "b b b b b"
-                "c c c c c"
-                "d d d d d"
-                "e e e e e"
-                "f f f f f";
-            place-items: center;
-            grid-template-rows: repeat(5, 12%);
-            position: fixed;
-            top: 5rem;
-            left: 0;
-            overflow-y: auto;
-            background: white;
-            z-index: 100;
-        }
-
-        .right {
-            width: 83%;
-            height: calc(100vh - 5rem);
-            margin-left: 17%;
-            overflow-y: auto;
-            padding: 1rem;
-            background: #f8f9fa;
-        }
-
-        .elem {
-            width: 100%;
-            height: 100%;
-            display: grid;
-            place-items: center;
-            border: 2px solid black;
-            cursor: pointer;
-        }
-
-        #elem1 {
-            grid-area: a;
-        }
-
-        #elem2 {
-            grid-area: b;
-        }
-
-        #elem3 {
-            grid-area: c;
-        }
-
-        #elem4 {
-            grid-area: d;
-        }
-
-        #elem5 {
-            grid-area: e;
-        }
-
-        #elem6 {
-            grid-area: f;
-        }
-
-        @media (max-width: 1024px) {
-            .left {
-                display: none;
-            }
-
-            .right {
-                width: 100%;
-                margin-left: 0;
-            }
-        }
-
-        @media (max-width: 768px) {
-            section {
-                flex-direction: column;
-            }
-
-            .left {
-                width: 100%;
-                height: auto;
-                position: relative;
-                top: 0;
-                grid-template-columns: repeat(3, 1fr);
-                grid-template-areas:
-                    "a b c"
-                    "d e f";
-                grid-template-rows: auto;
-                padding: 1rem;
-            }
-
-            .right {
-                width: 100%;
-                margin-left: 0;
-                height: auto;
-            }
-
-            .elem {
-                height: 60px;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .grid {
-                grid-template-columns: 1fr !important;
-            }
-        }
-    </style>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Montserrat:wght@400;500;600&display=swap"
+        rel="stylesheet">
 </head>
-
 <body>
-    <header>
-        <nav class="navbar">
-            <div class="logo">
-                <i class="ri-restaurant-2-fill" aria-hidden="true"></i>
-                <a class="logos" href="/index.html">Campus Cuisine</a>
-            </div>
-            <ul class="nav-links">
-                <li><a href="#"><i class="ri-home-2-fill"></i> Home</a></li>
-                <li class="dropdown">
-                    <a href="#">
-                        <i class="ri-building-2-fill"></i> Food Courts
-                        <i class="ri-arrow-down-s-line dropdown-icon"></i>
-                    </a>
-                    <div class="dropdown-content">
-                        <div class="column">
-                            <a href="#">Main Gate</a>
-                            <a href="#">Near BH4</a>
-                            <a href="#">Near BH1</a>
-                        </div>
-                        <div class="column">
-                            <a href="#">Near BH3</a>
-                            <a href="#">Near BH6</a>
+    <div class="nav">
+        <div class="logo"></div>
+        <div class="spaces"></div>
+        <div class="profile">
+            <img src="boy.png" alt="">
+        </div>
+    </div>
+    <div class="container">
+        <div>
+            <div class="top-navigation">
+                <div class="navigation">
+                    <div class="nav-section">
+                        <div class="section">
+                            <h2>Navigation</h2>
+                            <div class="info">
+                                <div class="nav-item">
+                                    <i class="ri-building-2-fill"></i>
+                                    <p>Blocks & Areas</p>
+                                </div>
+                                <div class="nav-item">
+                                    <i class="ri-store-2-line"></i>
+                                    <p>Food Courts</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </li>
-                <li><a href="#"><i class="ri-fire-fill"></i> Popular Dishes</a></li>
-                <li><a href="#"><i class="ri-star-half-fill"></i> Ratings</a></li>
-                <li><a href="#"><i class="ri-mail-fill"></i> Contact</a></li>
-            </ul>
-            <div class="mobile-menu">
-                <i class="ri-menu-line"></i>
+                    <div class="nav-section">
+                        <div class="section">
+                            <h2>Quick Filters</h2>
+                            <div class="info">
+                                <div class="nav-item">
+                                    <i class="ri-fire-fill"></i>
+                                    <p>Popular Now</p>
+                                </div>
+                                <div class="nav-item">
+                                    <i class="ri-star-s-fill"></i>
+                                    <p>Top Rated</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="nav-section">
+                        <div class="section">
+                            <h2>Food Type</h2>
+                            <div class="info">
+                                <div class="nav-item">
+                                    <i class="ri-time-fill"></i>
+                                    <p>North Indian</p>
+                                </div>
+                                <div class="nav-item">
+                                    <i class="ri-time-fill"></i>
+                                    <p>South Indian</p>
+                                </div>
+                                <div class="nav-item">
+                                    <i class="ri-time-fill"></i>
+                                    <p>Chinese</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </nav>
-    </header>
-
-    <section>
-        <div class="left">
-            <div class="elem" id="elem1">Main Gate</div>
-            <div class="elem" id="elem2">BH4</div>
-            <div class="elem" id="elem3">BH1</div>
-            <div class="elem" id="elem4">Science Block</div>
-            <div class="elem" id="elem5">Library</div>
-            <div class="elem" id="elem6">More Options</div>
         </div>
-        <div class="right">
-            <div class="grid grid-cols-2 gap-6">
-                <!-- Cards will be dynamically added here -->
+        <div class="container mx-auto max-w-7xl">
+            <div id="blocks-section">
+                
             </div>
         </div>
-    </section>
-
-    <script src="explore.js"></script>
+    </div>
+    <script src="script.js"></script>
 </body>
-
 </html>
