--- a/frontend/explore.html
+++ b/frontend/explore.html
@@ -86,6 +86,6 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="explore.js"></script>
 </body>
 </html>
