--- a/frontend/explore.html
+++ b/frontend/explore.html
@@ -21,7 +21,7 @@
         <div class="logo"></div>
         <div class="spaces"></div>
         <div class="profile">
-            <img src="boy.png" alt="">
+            <img src="/images/explore/boy.png" alt="">
         </div>
     </div>
     <div class="container">
