css path chnage

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,7 @@
         href="https://fonts.googleapis.com/css?family=Rubik:300,regular,500,600,700,800,900,300italic,italic,500italic,600italic,700italic,800italic,900italic"
         rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
+    <!-- <style>
         @font-face {
             font-family: American Typewriter;
             src: url('/font/American\ Typewriter\ Regular.ttf');
@@ -479,7 +479,7 @@
             }
 
         }
-    </style>
+    </style> -->
     <script src="script.js" defer></script>
 </head>
 
